--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="datetime-local"],
+input[type="date"],
 select {
     width: 100%;
     padding: 8px;
